--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,26 +1,10 @@
 <header>
-  <div class="content grid">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+  <div class="content">
+    <figure class="logo">DOL-003</figure>
+    <ul class="menu">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Find a modder</a></li>
+      <li><a href="#">Get listed</a></li>
+    </ul>
   </div>
 </header>
