--- a/app/assets/stylesheets/typography.scss
+++ b/app/assets/stylesheets/typography.scss
@@ -2,4 +2,14 @@ body {
   font-family: source-code-pro, monospace;
   font-weight: 400;
   font-style: normal;
+  color: $black;
+}
+
+a {
+  text-decoration: none;
+  color: $indigo;
+
+  &:hover {
+    color: $black;
+  }
 }
