--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
   <div class="content">
-    <figure class="logo">DOL-003</figure>
+    <a href="/" class="logo">DOL-003</a>
     <ul class="menu">
       <li><a href="#">About</a></li>
       <li><a href="#">Find a modder</a></li>
