--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -8,6 +8,7 @@ header {
 
     .logo {
       flex: none;
+      margin: 0;
       font-size: 20px;
       line-height: 1;
       font-weight: bold;
