--- a/app/assets/stylesheets/layouts/default.scss
+++ b/app/assets/stylesheets/layouts/default.scss
@@ -4,22 +4,18 @@ body.layout-default {
     height: 80px;
   }
 
-  > main {
-  }
-
   > footer {
     background-color: $black;
     color: $platinum;
   }
 
-  .container {
-
-  }
-
   .content {
-    padding: 0 3%;
     max-width: 1200px;
     margin: 0 auto;
+
+    @media (max-width: 1280px) {
+      max-width: 94vw;
+    }
 
     &.grid {
       display: grid;
