styling and docker volume

--- a/app/assets/stylesheets/layouts/default.scss
+++ b/app/assets/stylesheets/layouts/default.scss
@@ -5,8 +5,7 @@ body.layout-default {
   }
 
   > footer {
-    background-color: $black;
-    color: $platinum;
+    margin-top: 96px;
   }
 
   .content {
@@ -20,7 +19,56 @@ body.layout-default {
     &.grid {
       display: grid;
       grid-template-columns: repeat(12, 1fr);
-      grid-gap: 40px;
+      grid-column-gap: 40px;
+      grid-row-gap: 64px;
+
+      > .span-1 {
+        grid-column: span 1;
+      }
+
+      > .span-2 {
+        grid-column: span 2;
+      }
+
+      > .span-3 {
+        grid-column: span 3;
+      }
+
+      > .span-4 {
+        grid-column: span 4;
+      }
+
+      > .span-5 {
+        grid-column: span 5;
+      }
+
+      > .span-6 {
+        grid-column: span 6;
+      }
+
+      > .span-7 {
+        grid-column: span 7;
+      }
+
+      > .span-8 {
+        grid-column: span 8;
+      }
+
+      > .span-9 {
+        grid-column: span 9;
+      }
+
+      > .span-10 {
+        grid-column: span 10;
+      }
+
+      > .span-11 {
+        grid-column: span 11;
+      }
+
+      > .span-12 {
+        grid-column: span 12;
+      }
     }
   }
 }
