--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,1 +1,28 @@
-<div>hello</div>
+<div class="content grid">
+
+  <section class="intro span-8">
+    <h2>The ultimate directory of GCC modders</h2>
+    <p>Find controller modders who can do diagnostics, repairs, upgrades, or entire custom controllers. <a href="/about">About DOL-003</a>
+  </section>
+
+  <section class="span-6">
+    <h2>Search by <strong>location</strong></h2>
+    <p>blah</p>
+  </section>
+
+  <section class="span-5">
+    <h2>Search by <strong>services</strong></h2>
+    <p>blah</p>
+  </section>
+
+  <section class="span-12">
+    <h2>Featured modders</h2>
+    <p>blah</p>
+  </section>
+
+  <section class="span-8">
+    <h2>Are you a modder? <strong>Get listed.</strong></h2>
+    <p>blah</p>
+  </section>
+
+</div>
