--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,9 +1,13 @@
-<div class="content grid">
+<div class="intro" style="background-image:url(<%= image_path 'index-bg.jpg' %>)">
+  <div class="content grid">
+    <section class="span-8">
+      <h1>The ultimate directory<br>of GameCube controller modders</h1>
+      <p class="big">Find your next custom controller, or connect with controller modders who can help with diagnostics, repairs, or upgrades. <a href="/about">About DOL-003</a>
+    </section>
+  </div>
+</div>
 
-  <section class="intro span-8">
-    <h2>The ultimate directory of GCC modders</h2>
-    <p>Find controller modders who can do diagnostics, repairs, upgrades, or entire custom controllers. <a href="/about">About DOL-003</a>
-  </section>
+<div class="content grid">
 
   <section class="span-6">
     <h2>Search by <strong>location</strong></h2>
