--- a/app/frontend/entrypoints/application.scss
+++ b/app/frontend/entrypoints/application.scss
@@ -1,3 +1,20 @@
+@import "../colors";
+
 .intro {
-  margin-top: 140px;
+  background-position: center center;
+  background-size: cover;
+  padding: 220px 0 48px;
+  margin: -80px 0 64px;
+
+  p {
+    font-weight: 500;
+  }
+}
+
+body.application.index {
+
+  header .logo {
+    color: $indigo;
+    box-shadow: inset 0 0 0 3px $indigo;
+  }
 }
