--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -2,6 +2,12 @@
 
   <%= render 'header' %>
 
+  <div class="flash">
+    <% flash.each do |type, message| %>
+      <p class="<%= type %>"><%= message %></p>
+    <% end %>
+  </div>
+
   <main>
     <%= yield %>
   </main>
