--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= csp_meta_tag %>
 
     <link rel="stylesheet" href="https://use.typekit.net/uju8khj.css">
+    <script src="https://cdn.passage.id/passage-web.js"></script>
 
     <%= vite_client_tag %>
     <%= vite_typescript_tag 'base' %>
