--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -5,6 +5,9 @@
       <li><a href="#">About</a></li>
       <li><a href="#">Find a modder</a></li>
       <li><a href="#">Get listed</a></li>
+      <li>
+        <figure class="avatar"></figure>
+      </li>
     </ul>
   </div>
 </header>
