--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -11,7 +11,7 @@
 
   <section class="span-6">
     <h2>Search by <strong>location</strong></h2>
-    <p>blah</p>
+    <p>Current user id: <%= @user_id %></p>
   </section>
 
   <section class="span-5">
@@ -28,7 +28,5 @@
     <h2>Are you a modder? <strong>Get listed.</strong></h2>
     <p>blah</p>
   </section>
-
-  Static server: <%= Rails.application.config.public_file_server.enabled %>
 
 </div>
