--- a/app/frontend/entrypoints/base.scss
+++ b/app/frontend/entrypoints/base.scss
@@ -3,3 +3,6 @@
 @import "../colors";
 @import "../typography";
 @import "../foundation";
+@import "../form";
+@import "../text-input";
+@import "../button";
