--- a/app/frontend/typography.scss
+++ b/app/frontend/typography.scss
@@ -21,7 +21,8 @@ h1, h2, h3, p, ol, ul {
 
   & + h1,
   & + h2,
-  & + h3 {
+  & + h3,
+  & + .form {
     margin-top: 1.5em;
   }
 
@@ -55,6 +56,7 @@ p {
 
   &.big {
     font-size: 18px;
+    font-weight: 500;
   }
 }
 
