--- a/app/frontend/entrypoints/base.scss
+++ b/app/frontend/entrypoints/base.scss
@@ -3,6 +3,7 @@
 @import "../colors";
 @import "../typography";
 @import "../foundation";
+@import "../flash";
 @import "../form";
 @import "../text-input";
 @import "../button";
