--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,7 +11,7 @@
         form: f,
         field_name: :email,
         field_type: :email_field,
-        options: { autofocus: true, autocomplete: :email, class: 'text-input large' }
+        options: { autofocus: true, autocomplete: 'email', class: 'text-input large' }
       } %>
 
       <%= render 'form_field', locals: {
