--- a/app/views/modders/onboarding.html.erb
+++ b/app/views/modders/onboarding.html.erb
@@ -1,1 +1,45 @@
-<%= link_to 'sign out', sign_out_path %>
+<div class="content">
+  <h2>Welcome! Tell us a little about yourself.</h2>
+</div>
+
+<%= form_with model: @modder, html: { class: 'form' } do |form| %>
+
+  <div class="content grid">
+    <div class="span-4 caption">
+      <h3>Modder name</h3>
+      <p>The name you use as a modder. This can be a brand name or your actual name, whichever you use to advertise your modding services. You can change this later if necessary.</p>
+    </div>
+    <div class="span-8 input-container">
+      <%= render 'form_field', locals: {
+        resource: @modder,
+        form: form,
+        field_name: :name,
+        field_type: :text_field,
+        label: false,
+        options: { autofocus: true, class: 'text-input large', placeholder: 'Something Something Customs' }
+      } %>
+    </div>
+  </div>
+
+  <div class="content grid">
+    <div class="span-4 caption">
+      <h3>About you</h3>
+      <p>A short bio introducing yourself to people who see your profile. 500 characters max. Note that line breaks will not be preserved.</p>
+    </div>
+    <div class="span-8 input-container">
+      <%= render 'form_field', locals: {
+        resource: @modder,
+        form: form,
+        field_name: :description,
+        field_type: :text_area,
+        label: false,
+        options: { autofocus: true, maxlength: 500, class: 'textarea height-medium', placeholder: 'I started modding controllers in 1973 and ...' }
+      } %>
+    </div>
+  </div>
+
+  <div class="content">
+    <%= form.submit 'Continue →', class: 'button' %>
+  </div>
+
+<% end %>
