--- a/app/frontend/entrypoints/application.scss
+++ b/app/frontend/entrypoints/application.scss
@@ -1,16 +1,20 @@
 @import "../colors";
 
-.intro {
-  background-position: center center;
-  background-size: cover;
-  padding: 220px 0 48px;
-  margin: -80px 0 64px;
-}
-
 body.application.index {
+
+  main {
+    padding-top: 0;
+  }
 
   header .logo {
     color: $indigo;
     box-shadow: inset 0 0 0 3px $indigo;
+  }
+
+  .intro {
+    background-position: center center;
+    background-size: cover;
+    padding: 220px 0 48px;
+    margin: -80px 0 64px;
   }
 }
