--- a/app/frontend/form.scss
+++ b/app/frontend/form.scss
@@ -18,15 +18,6 @@
 
   .field {
 
-    .label {
-      display: inline-block;
-      font-size: 12px;
-      font-weight: bold;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      margin-bottom: 4px;
-    }
-
     &.error {
 
       .label {
@@ -47,6 +38,20 @@
 
     & + .actions {
       margin-top: 32px;
+    }
+  }
+
+  .label {
+    display: inline-block;
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 4px;
+
+    &.large {
+      font-size: 16px;
+      margin-bottom: 16px;
     }
   }
 
