--- a/app/frontend/button.scss
+++ b/app/frontend/button.scss
@@ -2,6 +2,9 @@
 
 .button {
   appearance: none;
+  display: inline-flex;
+  flex-flow: row nowrap;
+  align-items: center;
   border: 0;
   box-shadow: 0;
   height: 48px;
@@ -15,8 +18,10 @@
   border-radius: 48px;
   color: $white;
   cursor: pointer;
+  white-space: nowrap;
 
   &:hover {
+    color: #fff;
     background-color: lighten($indigo, 10%);
     box-shadow: 0 8px 8px -12px $black;
   }
@@ -24,5 +29,21 @@
   &:active {
     background-color: darken($indigo, 10%);
     box-shadow: inset 0 2px 10px -6px $black;
+  }
+
+  &.secondary {
+    color: $indigo;
+    background-color: transparent;
+    box-shadow: inset 0 0 0 2px $indigo;
+
+    &:hover {
+      background-color: #fff;
+      box-shadow: inset 0 0 0 2px $indigo, 0 8px 8px -12px $black;
+    }
+
+    &:active {
+      background-color: #eee;
+      box-shadow: inset 0 0 0 2px $indigo, inset 0 2px 10px -6px $black;
+    }
   }
 }
