--- a/app/frontend/header.scss
+++ b/app/frontend/header.scss
@@ -10,7 +10,7 @@ header {
 
     .logo {
       flex: none;
-      margin: 0;
+      margin: 0 0 0 -1px;
       font-size: 20px;
       line-height: 1;
       font-weight: bold;
@@ -43,7 +43,7 @@ header {
       }
 
       .avatar {
-        margin: 0;
+        margin: 0 -2px 0 0;
         width: 48px;
         height: 48px;
         border-radius: 48px;
