--- a/app/frontend/typography.scss
+++ b/app/frontend/typography.scss
@@ -64,6 +64,10 @@ p {
     flex-flow: row nowrap;
     align-items: center;
 
+    > .button:first-child {
+      margin-left: -2px;
+    }
+
     > * + * {
       margin-left: 24px;
     }
