--- a/app/frontend/button.scss
+++ b/app/frontend/button.scss
@@ -46,4 +46,23 @@
       box-shadow: inset 0 0 0 2px $indigo, inset 0 2px 10px -6px $black;
     }
   }
+
+  .dark & {
+
+    &.secondary {
+      color: $spice;
+      background-color: transparent;
+      box-shadow: inset 0 0 0 2px $spice;
+
+      &:hover {
+        background-color: rgba(#fff, 10%);
+        box-shadow: inset 0 0 0 2px $spice, 0 8px 8px -12px $black;
+      }
+
+      &:active {
+        background-color: #111;
+        box-shadow: inset 0 0 0 2px $spice, inset 0 2px 10px -6px $black;
+      }
+    }
+  }
 }
