--- a/app/frontend/typography.scss
+++ b/app/frontend/typography.scss
@@ -14,6 +14,14 @@ a {
   &:hover {
     color: lighten($indigo, 15%);
   }
+
+  .dark & {
+    color: $spice;
+
+    &:hover {
+      color: lighten($spice, 15%);
+    }
+  }
 }
 
 h1, h2, h3, p, ol, ul {
@@ -57,6 +65,10 @@ p {
   &.big {
     font-size: 18px;
     font-weight: 500;
+  }
+
+  &.small {
+    font-size: 14px;
   }
 
   &.actions {
