--- a/app/frontend/header.scss
+++ b/app/frontend/header.scss
@@ -29,8 +29,14 @@ header {
 
       > li {
         margin: 0;
+        position: relative;
 
-        a {
+        &.user-menu {
+          width: 48px;
+          height: 48px;
+        }
+
+        > a {
           text-transform: uppercase;
           font-size: 14px;
           letter-spacing: 1px;
@@ -42,12 +48,96 @@ header {
         }
       }
 
+      input[type="checkbox"] {
+        display: none;
+
+        &:checked ~ .overlay,
+        &:checked ~ .overlay-trim {
+          visibility: visible;
+          opacity: 1;
+          transform: none;
+          transition: transform .2s ease-out, opacity .2s ease-out;
+        }
+
+        &:checked ~ label > figure {
+          opacity: 1;
+        }
+      }
+
+      .overlay-trim {
+        position: absolute;
+        visibility: hidden;
+        top: -8px;
+        left: -8px;
+        right: -8px;
+        bottom: -8px;
+        background-color: #fff;
+        border-radius: 100px 100px 0 0;
+        pointer-events: none;
+        z-index: 100;
+        transform-origin: 32px 32px;
+        transform: rotate(10deg);
+        opacity: 0;
+        transition: transform .1s ease-out, opacity .1s ease-out, visibility 0s linear .1s;
+      }
+
       .avatar {
         margin: 0 -2px 0 0;
         width: 48px;
         height: 48px;
         border-radius: 48px;
         background-color: $platinum;
+        cursor: pointer;
+        opacity: 0.9;
+        position: relative;
+        z-index: 105;
+
+        &:hover {
+          opacity: 1;
+        }
+      }
+
+      .overlay {
+        position: absolute;
+        right: -8px;
+        top: calc(100% + 8px);
+        background-color: #fff;
+        box-shadow: 0 12px 12px -16px $black, 0 4px 64px -32px $black;
+        list-style: none;
+        margin: 0;
+        padding: 20px 60px 24px 28px;
+        visibility: hidden;
+        border-radius: 32px 0 32px 32px;
+        transform-origin: calc(100% - 32px) -32px;
+        transform: rotate(10deg);
+        opacity: 0;
+        transition: transform .1s ease-out, opacity .1s ease-out, visibility 0s linear .1s;
+
+        > li {
+          margin: 0;
+          padding: 0;
+
+          &.name {
+            padding-left: 4px;
+            margin-bottom: 12px;
+
+            > p {
+              font-weight: bold;
+              white-space: nowrap;
+            }
+          }
+
+          a {
+            display: inline-block;
+            white-space: nowrap;
+            padding: 4px;
+            line-height: 1;
+          }
+
+          & + li {
+            margin-top: 4px;
+          }
+        }
       }
     }
   }
