--- a/app/views/modders/show.html.erb
+++ b/app/views/modders/show.html.erb
@@ -13,7 +13,16 @@
       </div>
     </div>
     <div class="services">
-      services
+      <ol>
+        <li>Prebuilt controllers</li>
+        <li>Repairs</li>
+        <li>Phobs</li>
+        <li>Painting</li>
+        <li>Accepting commissions</li>
+        <li>Buttons</li>
+        <li>Snapback modules</li>
+        <li>Paracords</li>
+      </ol>
     </div>
   </section>
 
