--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -32,6 +32,33 @@ body.modders.show {
 
     .services {
       margin-top: 48px;
+        max-width: 600px;
+
+      ol {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        cursor: default;
+        display: flex;
+        flex-flow: row wrap;
+        gap: 12px;
+
+        > li {
+          display: flex;
+          align-items: center;
+          margin: 0;
+          padding: 0 16px;
+          height: 32px;
+          font-size: 14px;
+          text-transform: uppercase;
+          font-weight: bold;
+          letter-spacing: 1px;
+          line-height: 1;
+          box-shadow: inset 0 0 0 2px $platinum;
+          color: $platinum;
+          border-radius: 32px;
+        }
+      }
     }
   }
 
