profile edit styling

--- a/app/frontend/entrypoints/profiles.scss
+++ b/app/frontend/entrypoints/profiles.scss
@@ -4,6 +4,7 @@ body.profiles.edit {
 
     > .content {
       margin-top: 48px;
+      grid-row-gap: 32px;
 
       .caption {
         padding-top: 15px;
