--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -16,7 +16,7 @@
 
           <ul class="overlay">
             <li class="name"><p class="big"><%= current_modder.name %></p></li>
-            <li><a href="#">Edit profile</a></li>
+            <li><%= link_to 'Edit profile', edit_profile_path %></li>
             <li><a href="#">Account settings</a></li>
             <li><a href="#">Sign out</a></li>
           </ul>
