--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -63,7 +63,7 @@
 
     <div class="span-8 input-container">
       <%= react_component "ServiceSelector", {
-        test: 'oajwfijaweoij'
+        services: ModderService::SERVICES
       } %>
     </div>
 
