--- a/app/frontend/components/ServiceSelector.scss
+++ b/app/frontend/components/ServiceSelector.scss
@@ -3,9 +3,9 @@
 .ServiceSelector {
 
   .service-selector__control {
-    height: 48px;
+    min-height: 64px;
     box-shadow: inset 0 0 0 2px $platinum;
-    padding: 0 16px 1px;
+    padding: 16px;
     border-radius: 8px;
     background-color: #fff;
     cursor: pointer;
@@ -14,8 +14,104 @@
       box-shadow: inset 0 0 0 2px darken($platinum, 20%), 0 8px 8px -12px $black;
     }
 
-    &:focus {
+    &:focus,
+    &--is-focused,
+    &--is-focused:hover {
       box-shadow: inset 0 0 0 2px $spice, inset 0 2px 10px -6px $black;
+    }
+
+    &--menu-is-open {
+      border-radius: 8px 8px 0 0;
+    }
+
+    .service-selector__placeholder {
+      color: $platinum;
+    }
+
+    .service-selector__value-container {
+      gap: 8px;
+    }
+
+    .service-selector__multi-value {
+      display: flex;
+      align-items: center;
+      margin: 0;
+      padding: 0 20px 0 16px;
+      height: 32px;
+      font-size: 14px;
+      text-transform: uppercase;
+      font-weight: bold;
+      letter-spacing: 1px;
+      line-height: 1;
+      box-shadow: inset 0 0 0 2px $platinum;
+      color: $platinum;
+      border-radius: 32px;
+      cursor: grab;
+
+      .service-selector__multi-value__remove {
+        position: relative;
+        top: -1px;
+        left: 8px;
+        color: $platinum;
+        cursor: pointer;
+
+        svg {
+          width: 15px;
+          height: 15px;
+        }
+
+        &:hover {
+          color: darken($platinum, 20%);
+        }
+      }
+    }
+
+    .service-selector__indicators {
+      color: $platinum;
+      margin-left: 16px;
+
+      .service-selector__indicator {
+
+        &:hover {
+          color: darken($platinum, 20%);
+        }
+      }
+    }
+
+    &:hover .service-selector__indicator:last-child {
+      color: darken($platinum, 20%);
+    }
+  }
+
+  .service-selector__menu {
+    padding: 16px;
+    border-radius: 0 0 8px 8px;
+    box-shadow: inset 0 0 0 2px $spice;
+    margin-top: -2px;
+    background-color: #fff;
+
+    .service-selector__menu-list {
+      display: flex;
+      flex-flow: row wrap;
+      gap: 8px;
+    }
+
+    .service-selector__option {
+      width: auto;
+      display: flex;
+      align-items: center;
+      margin: 0;
+      padding: 0 16px;
+      height: 32px;
+      font-size: 14px;
+      text-transform: uppercase;
+      font-weight: bold;
+      letter-spacing: 1px;
+      line-height: 1;
+      box-shadow: inset 0 0 0 2px $platinum;
+      color: $platinum;
+      border-radius: 32px;
+      cursor: pointer;
     }
   }
 }
