--- a/app/frontend/components/ServiceSelector.scss
+++ b/app/frontend/components/ServiceSelector.scss
@@ -115,3 +115,19 @@
     }
   }
 }
+
+.service-selector__multi-value {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0 20px 0 16px;
+  height: 32px;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 1px;
+  line-height: 1;
+  box-shadow: inset 0 0 0 2px $platinum;
+  color: $platinum;
+  border-radius: 32px;
+}
