--- a/app/frontend/flash.scss
+++ b/app/frontend/flash.scss
@@ -1,5 +1,4 @@
 @keyframes fadein {
-
   from {
     opacity: 0;
     transform: translateY(-32px) scale(0.95);
@@ -34,7 +33,7 @@
     border-radius: 16px;
     box-shadow: 0 12px 12px -16px $black;
     opacity: 0;
-    animation: fadein .4s ease-out 1s forwards;
+    animation: fadein 0.4s ease-out 0.4s forwards;
 
     &.notice {
       background-color: hsl(hue($emerald), saturation($emerald), 80%);
@@ -60,7 +59,7 @@
         color: hsl(hue($mario), saturation($mario), 70%);
 
         &:hover {
-        color: hsl(hue($mario), saturation($mario), 50%);
+          color: hsl(hue($mario), saturation($mario), 50%);
         }
       }
     }
