--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -23,7 +23,7 @@
 
         </li>
       <% elsif !user_signed_in? %>
-        <li><%= link_to 'Get listed', new_registration_path %></li>
+        <li><%= link_to 'Get listed', new_user_registration_path %></li>
       <% end %>
     </ul>
   </div>
