--- a/app/views/modders/show.html.erb
+++ b/app/views/modders/show.html.erb
@@ -9,6 +9,7 @@
       <figure class="logo"></figure>
       <div>
         <h1><%= @modder.name %></h1>
+        <p class="city"><%= inline_svg_tag 'pin' %><%= @modder.city %></p>
         <p><%= @modder.bio %></p>
       </div>
     </div>
