--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -27,6 +27,7 @@ body.modders.show {
         color: $spice;
         margin-top: 4px;
         gap: 8px;
+        font-weight: 500;
 
         svg {
           flex: none;
