--- a/app/frontend/components/ServiceSelector.scss
+++ b/app/frontend/components/ServiceSelector.scss
@@ -1,7 +1,6 @@
 @import "@/colors";
 
 .ServiceSelector {
-
   .service-selector__control {
     min-height: 64px;
     box-shadow: inset 0 0 0 2px $platinum;
@@ -43,8 +42,8 @@
       font-weight: bold;
       letter-spacing: 1px;
       line-height: 1;
-      box-shadow: inset 0 0 0 2px $platinum;
-      color: $platinum;
+      box-shadow: inset 0 0 0 2px var(--service-color, $platinum);
+      color: var(--service-color, $platinum);
       border-radius: 32px;
       cursor: grab;
 
@@ -71,7 +70,6 @@
       margin-left: 16px;
 
       .service-selector__indicator {
-
         &:hover {
           color: darken($platinum, 20%);
         }
@@ -108,8 +106,8 @@
       font-weight: bold;
       letter-spacing: 1px;
       line-height: 1;
-      box-shadow: inset 0 0 0 2px $platinum;
-      color: $platinum;
+      box-shadow: inset 0 0 0 2px var(--service-color, $platinum);
+      color: var(--service-color, $platinum);
       border-radius: 32px;
       cursor: pointer;
     }
@@ -127,7 +125,7 @@
   font-weight: bold;
   letter-spacing: 1px;
   line-height: 1;
-  box-shadow: inset 0 0 0 2px $platinum;
-  color: $platinum;
+  box-shadow: inset 0 0 0 2px var(--service-color, $platinum);
+  color: var(--service-color, $platinum);
   border-radius: 32px;
 }
