--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -67,8 +67,8 @@ body.modders.show {
           font-weight: bold;
           letter-spacing: 1px;
           line-height: 1;
-          box-shadow: inset 0 0 0 2px $platinum;
-          color: $platinum;
+          box-shadow: inset 0 0 0 2px var(--service-color, $platinum);
+          color: var(--service-color, $platinum);
           border-radius: 32px;
         }
       }
